--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Appel</string>
     <string name="integration_web">Integration Web</string>
+    <string name="submit">Submit</string>
 </resources>
